GNOME Bugzilla – Bug 661155
Fix set_qdata warning on accessing NULL gobject property
Last modified: 2012-02-21 11:26:56 UTC
Created attachment 198509 [details] [review] Do not set qdata on NULL gobjects. pygobject_new_sunk() may be called with NULL (see pyg_value_as_pygobject()); add a guard to avoid a warning trying to set qdata on it.
I believe this is a duplicate of #653007.
It is, I like this patch better as it is cleaner.
Comment on attachment 198509 [details] [review] Do not set qdata on NULL gobjects. There are trailing spaces that need to be removed but other than that is is good to commit
*** Bug 653007 has been marked as a duplicate of this bug. ***
Could anyone please commit this? Also, are there any plans to release the next 2.28 bugfix release soon? I (and I suppose many others still using pygobject 2.x) would very much appreciate seeing this released.
Pushed to 2-28 branch.