Fix set_qdata warning on accessing NULL gobject property

https://bugzilla.gnome.org/show_bug.cgi?id=661155